TODO: clarify and get rid of SMOOTH_REFRESH etc.
WISH: OnTheSpot editing, or maybe switch to miiiiiiif. or maybe use perl and an overlay...
WISH: just for fun, do shade and tint with XRender.
WISH: support tex fonts

7.0
TODO: run external commands more sytematically (using $self->env etc.)
TODO: document searchable-scorllback hotkey
TODO: double-click and right-extend
	- added sections for DISTRIBUTION MAINTAINERS and about
          SETUID/SETGID to the FAQ.
        - selection, searchable-scrollback, selection-popup and
          option-popup extensions enabled by default.
        - increased xft drawing speed for problematic fonts. The effect
          will likely be small as 99% of the xft slowness is server-related.
        - perl: much increased functionality, better overlays, popup support
          and much much more.
        - perl: urxvt::line now can set via ->t and ->r.
        - perl: changed interpretation of --perl-ext-common and -pe.
        - perl: finally implemented --perl-eval.
        - perl: non-blocking anyevent support.
        - perl: run tainted and ignore perl-eval/perl-lib if started
          setuid/setgid.
        - free the resource database: this plugs a massive memory leak. As a
          side effect, it also gets rid of XGetDefault calls.
        - free one of the cursors, fixes a small memory leak.
        - built-in (as opposed to terminfos) visual bell was broken/too fast.
        - applied minor cleanups by Ladislav Michnovic.
        - applied better configure support for openpty and other pty stuff
          (Emanuele Giaquinta).
        - mark-urls launch-on-click by jepler.
        - removed "small" resource parsing function, as it wasn't really
          compatible, and not really small either.
        - removed PATH_ENV and PATH file search support.
        - removed support for locale-specific app-defaults file.
        - fixed a bug where out-of-bounds colour sequences could lead
          to crashes.